--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/nguyenprocode/Bot12.git"
+        "url": "git+https://github.com/nguyenprocode/Thanh-Nguy-n-Experiment.git"
     },
      "author": "CatalizCS",
     "license": "GPL-3.0",
